# antidebug-tools

./: CMakeLists.txt  README.md  kılavuz.txt  license.lic  main.cpp  test.bat
Common/: globals.cpp  helperFunctions.cpp  literal.cpp  literal.h
Security/Antidebug/: antidebug.cpp
Security/Complexity/: Complexity.cpp  Complexity.h
Security/License/: LicenseController.cpp
Security/TimeCheck/: TimeCheckcpp.cpp
Security/filehashcheck/: filehashcheck.cpp
Security/hashid/: HashChecker  HashChecker.lib  filehashcheck.cpp  hashID.h  hashid.txt
Security/hashutils/: hashutils.cpp
Security/runtimeprotect/: aaa.txt  runtimeprotect.cpp
Util/: task.cpp  util.cpp
include/Common/: globals.h  helperFunctions.h  settings.h
include/Security/AntiDebug/: antidebug.h  antidebugger.h
include/Security/DateManagement/: datemanagement.h
include/Security/IODetection/: IODedection.h
include/Security/License/: LicenseController.h
include/Security/TimeCheck/: TimeCheck.h
include/Security/filehashcheck/: filehashcheck.h
include/Security/hashutils/: hashutils.h
include/Security/runtimeprotect/: runtimeprotect.h
include/Util/: task.h  util.h
src/: dllmain.cpp
src/Common/: globals.cpp  helperFunctions.cpp  literal.cpp
src/Security/AntiDebug/: antidebug.cpp  antidebugger.cpp
src/Security/Complexity/: Complexity.cpp
src/Security/IODetection/: IODedection.cpp
src/Security/License/: LicenseController.cpp
src/Security/TimeCheck/: TimeCheck.cpp
src/Security/filehashcheck/: filehashcheck.cpp
src/Util/: task.cpp  util.cpp
tests/: test.cpp
(+4 files in other folders)
